--- a/Loan Credit Worthiness Project_LK_v2.ipynb
+++ b/Loan Credit Worthiness Project_LK_v2.ipynb
@@ -419,9 +419,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\brady\\AppData\\Local\\Temp\\ipykernel_25836\\3789349187.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\brady\\AppData\\Local\\Temp\\ipykernel_29592\\3789349187.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  abs_corrs = df_train_clean.corr()['TARGET'].abs().sort_values(ascending=False)[1:11]\n",
-      "C:\\Users\\brady\\AppData\\Local\\Temp\\ipykernel_25836\\3789349187.py:3: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\brady\\AppData\\Local\\Temp\\ipykernel_29592\\3789349187.py:3: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  top_corrs = df_train_clean.corr()['TARGET'].loc[abs_corrs.index]\n"
      ]
     },
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf7c9029",
+   "id": "f09b5486",
    "metadata": {},
    "source": [
     "`EXT_SOURCE_1`, `EXT_SOURCE_2`, and `EXT_SOURCE_3` are credit scores from external sources"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c0fd112c",
+   "id": "201acddb",
    "metadata": {
     "scrolled": true
    },
@@ -471,19 +471,15 @@
     "import pandas as pd\n",
     "from sklearn.feature_selection import VarianceThreshold\n",
     "\n",
-    "# Assuming df_train is your DataFrame\n",
-    "\n",
-    "# Select non-numeric columns\n",
+    "# select and one-hot encode non-numeric columns\n",
     "non_numeric_columns = df_train_clean.select_dtypes(exclude=['number']).columns\n",
-    "\n",
-    "# One-hot encode non-numeric columns\n",
     "df_train_encoded = pd.get_dummies(df_train, columns=non_numeric_columns)\n",
     "\n",
-    "# Apply variance threshold feature selection\n",
-    "selector = VarianceThreshold(threshold=0.1)\n",
+    "# variance threshold feature selection\n",
+    "selector = VarianceThreshold(threshold=.25)\n",
     "selector.fit(df_train_encoded)\n",
     "\n",
-    "# Get selected columns\n",
+    "# get selected columns\n",
     "selected_cols = df_train_encoded.columns[selector.get_support()].tolist()\n",
     "\n",
     "if 'TARGET' not in selected_cols:\n",
@@ -495,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d66f9505",
+   "id": "a46cf29b",
    "metadata": {
     "scrolled": true
    },
@@ -503,7 +499,7 @@
     {
      "data": {
       "text/plain": [
-       "(307511, 57)"
+       "(307511, 22)"
       ]
      },
      "execution_count": 12,
@@ -525,8 +521,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "80cdf17c",
+   "execution_count": 13,
+   "id": "a291eb6e",
    "metadata": {
     "scrolled": true
    },
@@ -573,15 +569,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "efab90ce",
+   "execution_count": 14,
+   "id": "5970cbaf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# change variable names back to standard\n",
-    "X_train = X_train_smote_df\n",
-    "y_train = y_train_smote_df\n",
-    "X_test = X_test_processed_df"
+    "X_train = X_train_smote\n",
+    "y_train = y_train_smote\n",
+    "X_test = X_test_processed"
    ]
   },
   {
@@ -597,16 +593,7 @@
    "execution_count": null,
    "id": "2eb150c4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\brady\\miniconda3\\envs\\ds\\lib\\site-packages\\sklearn\\base.py:1152: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return fit_method(estimator, *args, **kwargs)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create and fit Random Forest classifier\n",
     "rf_clf = RandomForestClassifier(n_estimators=500, n_jobs=-1)\n",
@@ -773,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90ec29fc",
+   "id": "ae94ae3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30520086",
+   "id": "5b9c1ba5",
    "metadata": {},
    "outputs": [],
    "source": [
